@@ -1,3 +1,8 @@
+2002-07-21  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* fvwm/add_window.c (CaptureOneWindow):
+	fixed a core dump w/ windows being destroyed during a recapture
+
 2002-07-18  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* fvwm/events.c (HandleEnterNotify):
